add nbviewer and github links

--- a/Section-1_blaze-solutions.ipynb
+++ b/Section-1_blaze-solutions.ipynb
@@ -27,10 +27,12 @@
     "$ conda install -y blaze\n",
     "$ conda install -y bokeh\n",
     "$ conda install -y odo\n",
-    "$ conda install -y into # required because of recent renaming of into that collides inside blaze\n",
     "```\n",
     "\n",
-    "The last command is there because of an issue with `odo` which was recently renamed (formerly `into`).\n",
+    "nbviewer: http://nbviewer.ipython.org/github/ContinuumIO/pydata-apps/blob/master/Section-1_blaze.ipynb\n",
+    "\n",
+    "github: https://github.com/ContinuumIO/pydata-apps\n",
+    "\n",
     "\n",
     "<hr/>\n",
     "\n",
