updating into to odo

--- a/Section_2_bokeh.ipynb
+++ b/Section_2_bokeh.ipynb
@@ -609,19 +609,19 @@
    },
    "outputs": [],
    "source": [
-    "TOOLS = \"pan,wheel_zoom,box_zoom,reset,save,box_select,lasso_select\"\n",
+    "TOOLS = \"pan,wheel_zoom,box_zoom,reset,save,lasso_select\"\n",
     "\n",
     "df = df.sort('avg')\n",
     "source = ColumnDataSource(df)\n",
-    "s1 = figure(x_range=list(df[\"teamID\"]), tools=TOOLS)\n",
+    "s1 = figure(title=\"Pay Avg\",x_range=source.data[\"teamID\"], tools=TOOLS, width=500)\n",
     "s1.scatter(x=\"teamID\", y=\"avg\", source=source)\n",
     "s1.xaxis.major_label_orientation = np.pi/3\n",
     "\n",
-    "s2 = figure(x_range=list(df[\"teamID\"]), tools=TOOLS)\n",
+    "s2 = figure(title=\"Pay Ratio\", x_range=s1.x_range, tools=TOOLS, width=500)\n",
     "s2.scatter(x=\"teamID\", y=\"ratio\", source=source)\n",
     "s2.xaxis.major_label_orientation = np.pi/3\n",
     "\n",
-    "p = gridplot([[s1],[s2]])\n",
+    "p = gridplot([[s1, s2]])\n",
     "show(p)"
    ]
   },
@@ -642,7 +642,6 @@
    },
    "outputs": [],
    "source": [
-    "from into import into\n",
     "result = bz.by(db.AllstarFull.teamID, all_stars=db.AllstarFull.playerID.count()\n",
     "                ).sort('all_stars', ascending=False)\n",
     "r = bz.Data(odo(result, pd.DataFrame))\n",
@@ -652,7 +651,7 @@
     "print \"normalized list of all_stars:\\n\", bz.compute((r.all_stars / m).head())\n",
     "\n",
     "# Now let's use this as the size of the circles in the scatter plot\n",
-    "df1 = into(pd.DataFrame, r)\n",
+    "df1 = odo(r, pd.DataFrame)\n",
     "df1['all_stars'] /= (df1['all_stars'].max() / 10)\n",
     "df1['all_stars'] += 10"
    ]
@@ -686,10 +685,10 @@
    },
    "outputs": [],
    "source": [
-    "df_j = into(pd.DataFrame, r)\n",
+    "df_j = odo(r, pd.DataFrame)\n",
     "df_j = df_j.sort(\"max\")\n",
     "print df_j.head()\n",
-    "source = into(ColumnDataSource, df_j)\n",
+    "source = odo(df_j, ColumnDataSource)\n",
     "p = figure(x_range=list(df_j[\"teamID\"]))\n",
     "p.scatter(x=\"teamID\", y=\"max\", size=\"all_stars\", source=source, fill_alpha=0.5, )\n",
     "p.xaxis.major_label_orientation = np.pi/3\n",
@@ -716,13 +715,13 @@
    "source": [
     "def compute_df(year=2012):\n",
     "    result = db.Salaries[ db.Salaries.yearID==year ]\n",
-    "    result = bz.Data(into(pd.DataFrame, result))\n",
+    "    result = bz.Data(odo(result, pd.DataFrame))\n",
     "    result = bz.by(result.teamID, max=result.salary.max()).sort('max', ascending=False)\n",
     "    df = odo(result, pd.DataFrame)\n",
     "    asf_year = db.AllstarFull[ db.AllstarFull.yearID==year]\n",
     "    result = bz.by(asf_year.teamID, all_stars=db.AllstarFull.playerID.count()\n",
     "                    ).sort('all_stars', ascending=False)\n",
-    "    r = bz.Data(into(pd.DataFrame, result))\n",
+    "    r = bz.Data(odo(result, pd.DataFrame))\n",
     "    df1 = odo(r, pd.DataFrame)\n",
     "    df1['all_stars'] /= (df1['all_stars'].max() / 10)\n",
     "    df1['all_stars'] += 10\n",
@@ -731,7 +730,7 @@
     "    df_j = df_j.sort(\"max\")\n",
     "    return df_j\n",
     "\n",
-    "source = into(ColumnDataSource, compute_df())\n",
+    "source = odo(compute_df(), ColumnDataSource)\n",
     "\n",
     "p = figure(x_range=list(source.data[\"teamID\"]))\n",
     "p.scatter(x=\"teamID\", y=\"max\", size=\"all_stars\", source=source, fill_alpha=0.5, )\n",
