update intro with readme

--- a/Section_0_Introduction.ipynb
+++ b/Section_0_Introduction.ipynb
@@ -186,27 +186,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This tutorial uses many different libraries that are all available with the [Anaconda Distribution](http://continuum.io/downloads). Once you have Anaconda install, please run these commands from a terminal:\n",
+    "- Download and install the [Anaconda Python Distribution](http://continuum.io/downloads)\n",
+    "- Download [archive of this repository](https://github.com/ContinuumIO/pydata-apps/archive/master.zip) or checkout with git \n",
     "\n",
-    "```\n",
-    "$ conda install -y blaze\n",
-    "$ conda install -y bokeh\n",
-    "$ conda install -y odo\n",
-    "```\n",
+    "  ```\n",
+    "  git clone https://github.com/ContinuumIO/pydata-apps.git\n",
+    "  ```\n",
     "\n",
-    "<hr>\n",
+    "- Each tutorial has a slightly different set of requirements. To download all the requirements try:\n",
+    "  \n",
+    "  ```\n",
+    "  conda update conda\n",
+    "  conda env create\n",
+    "  ```\n",
     "\n",
-    "### Versions\n",
-    "```\n",
-    "conda list\n",
-    "```\n",
-    "```\n",
-    "blaze                     0.7.3                np19py27_0  \n",
-    "bokeh                     0.8.2                np19py27_1  \n",
-    "odo                       0.3.1                np19py27_0  \n",
-    "ipython                   3.1.0                    py27_0  \n",
-    "ipython-notebook          3.1.0                    py27_1 \n",
-    "```"
+    "- Activate the environment\n",
+    "\n",
+    "  ```\n",
+    "  source activate pydata_apps\n",
+    "  ```\n",
+    "\n",
+    "### Static notebooks\n",
+    "\n",
+    "For those want to just follow a static notebook (not all interactive elements will work), see the following links:\n",
+    "\n",
+    "- [Section 0: Introduction](http://nbviewer.ipython.org/github/ContinuumIO/pydata-apps/blob/master/Section_0_Introduction.ipynb)\n",
+    "- [Section 1: Blaze Tutorial](http://nbviewer.ipython.org/github/ContinuumIO/pydata-apps/blob/master/Section_1_blaze.ipynb)\n",
+    "- [Section 2: Bokeh Tutorial](http://nbviewer.ipython.org/github/ContinuumIO/pydata-apps/blob/master/Section_2_bokeh.ipynb) \n"
    ]
   }
  ],
