--- a/Section_0_Introduction.ipynb
+++ b/Section_0_Introduction.ipynb
@@ -40,6 +40,10 @@
    "source": [
     "## Follow along\n",
     "\n",
+    "### http://git.io/pydata-apps\n",
+    "\n",
+    "<br>\n",
+    "\n",
     "- Option A: Download repository\n",
     "\n",
     "### https://github.com/ContinuumIO/pydata-apps\n",
@@ -66,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -85,10 +89,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x104ab4d10>"
+       "<IPython.lib.display.IFrame at 0x104194ed0>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -142,10 +146,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x104ab4490>"
+       "<IPython.lib.display.IFrame at 0x104194490>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
